--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-./Semana_4
-./Semana_1/a.exe
-./Semana_2/a.exe
-./Semana_3/a.exe
-./Semana_4/a.exe
+Semana_4
+Semana_1/a.exe
+Semana_2/a.exe
+Semana_3/a.exe
+Semana_4/a.exe
