--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "vector": "cpp",
         "ostream": "cpp",
         "string": "cpp",
-        "deque": "cpp"
+        "deque": "cpp",
+        "cmath": "cpp"
     }
 }
